--- a/.github/workflows/cli-jobs-pipelines-nyc-taxi-pipeline.yml
+++ b/.github/workflows/cli-jobs-pipelines-nyc-taxi-pipeline.yml
@@ -29,8 +29,7 @@ jobs:
     - name: azure login
       uses: azure/login@v1
       with:
-        creds: '{"clientId":"${{ secrets.CLIENT_ID }}","clientSecret":"${{ secrets.CLIENT_SECRET }}","subscriptionId":"${{ secrets.SUBSCRIPTION_ID }}","tenantId":"${{ secrets.TENANT_ID }}"}'
-        allow-no-subscriptions: true
+        creds: ${{secrets.AZUREML_CREDENTIALS}}
     - name: bootstrap resources
       run: |
           echo '${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}';
